T-004-dice-model-v11 change test, DiceServiceImpl